--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,12 @@
   ],
   "dependencies": {
     "asteroid": "~0.6.1",
-    "leaflet-map": "~1.1.0"
+    "leaflet-map": "~1.1.0",
+    "page": "visionmedia/page.js#~1.6.4",
+    "paper-dialog": "PolymerElements/paper-dialog#~1.0.3",
+    "iron-icon": "PolymerElements/iron-icon#~1.0.7",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.6",
+    "paper-button": "PolymerElements/paper-button#~1.0.11",
+    "paper-toast": "PolymerElements/paper-toast#~1.1.1"
   }
 }
