--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.6",
     "paper-button": "PolymerElements/paper-button#~1.0.11",
     "paper-toast": "PolymerElements/paper-toast#~1.1.1",
-    "iron-form": "PolymerElements/iron-form#~1.0.13"
+    "iron-form": "PolymerElements/iron-form#~1.0.13",
+    "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#~1.1.0"
   }
 }
